--- a/dome/css/frame2.css
+++ b/dome/css/frame2.css
@@ -1,16 +1,3 @@
 body,html{height:100%;height:100%;background:#000;}
 	*{padding:0;margin:0;}
-	#wrap{height:400px;width:720px;margin:200px auto;transform-style:preserve-3d;transform:perspective(2000px) rotateX(0deg) rotateY(0deg);position:relative;}
-	#wrap div{padding:0 5px;}
-	#wrap .mm1{position:absolute;top:0px;left:0;width:120px;height:400px;overflow:hidden;}
-	#wrap .mm1 img{position:absolute;left:0;top:0;}
-	#wrap .mm2{position:absolute;top:0px;left:120px;width:120px;height:400px;overflow:hidden;}
-	#wrap .mm2 img{position:absolute;left:-120px;top:0;}
-	#wrap .mm3{position:absolute;top:0px;left:240px;width:120px;height:400px;overflow:hidden;}
-	#wrap .mm3 img{position:absolute;left:-240px;top:0;}
-	#wrap .mm4{position:absolute;top:0px;left:360px;width:120px;height:400px;overflow:hidden;}
-	#wrap .mm4 img{position:absolute;left:-360px;top:0;}
-	#wrap .mm5{position:absolute;top:0px;left:480px;width:120px;height:400px;overflow:hidden;}
-	#wrap .mm5 img{position:absolute;left:-480px;top:0;}
-	#wrap .mm6{position:absolute;top:0px;left:600px;width:120px;height:400px;overflow:hidden;}
-	#wrap .mm6 img{position:absolute;left:-600px;top:0;}
+#wrap1{height:400px;width:720px;margin:200px auto;}
